codepkg/objects/Price_Product_by_Currency__c.object
<CustomObject>
    <description>Pricebook Product by Currency</description>
    <fields>
        <fullName>Color_Size__c</fullName>
        <formula>TEXT(Price_Book_Product__r.Color__c )&amp;&quot; &amp; &quot;&amp; Price_Book_Product__r.Sizer_Print__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color &amp; Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Color__c</fullName>
        <formula>TEXT(Price_Book_Product__r.Color__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Color</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Ref_Model__c</fullName>
        <formula>Price_Book_Product__r.Customer_Ref_Model__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Ref Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExRate_USD_to_Local__c</fullName>
        <label>ExRate USD to Local</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Local_ERP_customer_code__c</fullName>
        <label>Local ERP customer code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_SKU__c</fullName>
        <formula>Price_Book_Product__r.Local_SKU__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Local SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MagNET_Price_Code__c</fullName>
        <label>MagNET Price Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mainetti_Model_Code__c</fullName>
        <formula>Price_Book_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mainetti Model Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_to_Company__c</fullName>
        <formula>TEXT( Price_Book_Product__r.Order_to_Company__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order to Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBP_ID__c</fullName>
        <formula>Price_Book_Product__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PBP_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_1000_pcs__c</fullName>
        <formula>Price_100_pcs__c * 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price/1000 pcs</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_1000_pcs_del__c</fullName>
        <label>Price/1000 pcs</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_100_pcs__c</fullName>
        <label>Price/100 pcs</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Book_Product_Active__c</fullName>
        <formula>Price_Book_Product__r.Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Book Product Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Price_Book_Product__c</fullName>
        <label>Price &amp; Specification Book Product</label>
        <referenceTo>Price_Specification_Book_Product__c</referenceTo>
        <relationshipLabel>Price Product by Currency</relationshipLabel>
        <relationshipName>Price_Product_by_Currency</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <formula>Price_Book_Product__r.Price_Specification_Book__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Book</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retailer_Code__c</fullName>
        <formula>Price_Book_Product__r.Retailer_Code__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Retailer Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM_Price__c</fullName>
        <formula>Price_100_pcs__c /100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UOM Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Price Product by Currency</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BEST_LESS</fullName>
        <columns>NAME</columns>
        <columns>Mainetti_Model_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Price_100_pcs__c</columns>
        <columns>Price_1000_pcs__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Price_Book__c</columns>
        <columns>Price_Book_Product_Active__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>PBP_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>BEST</value>
        </filters>
        <filters>
            <field>Price_Book_Product_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>contains</operation>
            <value>AUD</value>
        </filters>
        <label>_BEST &amp; LESS</label>
    </listViews>
    <listViews>
        <fullName>DEMO_RETAILER</fullName>
        <columns>NAME</columns>
        <columns>Mainetti_Model_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>MagNET_Price_Code__c</columns>
        <columns>Price_100_pcs__c</columns>
        <columns>Price_1000_pcs__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Price_Book__c</columns>
        <columns>Price_Book_Product_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>DEMO RETAILER</value>
        </filters>
        <filters>
            <field>Price_Book_Product_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Mainetti_Model_Code__c</field>
            <operation>contains</operation>
            <value>shoppingbag001</value>
        </filters>
        <filters>
            <field>Order_to_Company__c</field>
            <operation>contains</operation>
            <value>hong kong</value>
        </filters>
        <label>_DEMO RETAILER</label>
    </listViews>
    <listViews>
        <fullName>EILEEN_FISHER</fullName>
        <columns>NAME</columns>
        <columns>Mainetti_Model_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UOM_Price__c</columns>
        <columns>Price_100_pcs__c</columns>
        <columns>Price_1000_pcs__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Price_Book__c</columns>
        <columns>Price_Book_Product_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>FISHER</value>
        </filters>
        <filters>
            <field>Price_Book_Product_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>_EILEEN FISHER</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>H_M</fullName>
        <columns>NAME</columns>
        <columns>Mainetti_Model_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UOM_Price__c</columns>
        <columns>Price_100_pcs__c</columns>
        <columns>Price_1000_pcs__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Price_Book__c</columns>
        <columns>Price_Book_Product_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>H&amp;M</value>
        </filters>
        <filters>
            <field>Price_Book_Product_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>_H&amp;M</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>JUST_BRAND</fullName>
        <columns>NAME</columns>
        <columns>Mainetti_Model_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Price_100_pcs__c</columns>
        <columns>Price_1000_pcs__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Price_Book__c</columns>
        <columns>Price_Book_Product_Active__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>PBP_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>JUST</value>
        </filters>
        <filters>
            <field>Price_Book_Product_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <label>_JUST BRAND</label>
        <sharedTo>
            <role>Administrator_Role</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MACYS</fullName>
        <columns>NAME</columns>
        <columns>Mainetti_Model_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>Price_100_pcs__c</columns>
        <columns>Price_1000_pcs__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Price_Book__c</columns>
        <columns>Price_Book_Product_Active__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>PBP_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>MACY</value>
        </filters>
        <filters>
            <field>Price_Book_Product_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>_MACY&apos;S</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MCare_MagNET</fullName>
        <columns>NAME</columns>
        <columns>Mainetti_Model_Code__c</columns>
        <columns>Customer_Ref_Model__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UOM_Price__c</columns>
        <columns>Price_100_pcs__c</columns>
        <columns>Price_1000_pcs__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Price_Book__c</columns>
        <columns>Price_Book_Product_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>MAINETTI CARE</value>
        </filters>
        <filters>
            <field>Price_Book_Product_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Order_to_Company__c</field>
            <operation>contains</operation>
            <value>hk</value>
        </filters>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <label>_MCare MagNET</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>M_CARE</fullName>
        <columns>Price_Book_Product__c</columns>
        <columns>NAME</columns>
        <columns>Mainetti_Model_Code__c</columns>
        <columns>Customer_Ref_Model__c</columns>
        <columns>Color_Size__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UOM_Price__c</columns>
        <columns>MagNET_Price_Code__c</columns>
        <columns>Price_100_pcs__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Price_Book__c</columns>
        <columns>Price_Book_Product_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>DEMO</value>
        </filters>
        <filters>
            <field>Price_Book_Product_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>USD</value>
        </filters>
        <filters>
            <field>Order_to_Company__c</field>
            <operation>contains</operation>
            <value>health</value>
        </filters>
        <label>_MCare DMS</label>
        <sharedTo>
            <role>Administrator_Role</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Search</fullName>
        <columns>NAME</columns>
        <columns>Mainetti_Model_Code__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UOM_Price__c</columns>
        <columns>Price_100_pcs__c</columns>
        <columns>Price_1000_pcs__c</columns>
        <columns>Retailer_Code__c</columns>
        <columns>Order_to_Company__c</columns>
        <columns>Price_Book__c</columns>
        <columns>Price_Book_Product_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Retailer_Code__c</field>
            <operation>contains</operation>
            <value>uNIQ</value>
        </filters>
        <filters>
            <field>Price_Book_Product_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>_Search</label>
        <sharedTo>
            <group>Administrator_Group</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PPC-{00000000}</displayFormat>
        <label>Price Product by Currency Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Product by Currency</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>